hphp/hack/test/typecheck/capitalization6.php.exp
File "capitalization6.php", line 6, characters 7-15:
Could not find `CamelCAse`. (Naming[2006])
File "capitalization6.php", line 3, characters 7-15:
Did you mean `CamelC~~a~~se` instead (which only differs by case)?
