hphp/hack/test/typecheck/capitalization6.php
<?hh

class CamelCase {}

function foo(): void {
  new CamelCAse();
}
